# Zobo

./: .gitignore  README.md  TODO.md
zobo_eagle/: Zobo.brd  Zobo.sch
zobo_esp32/: CMakeLists.txt  build_flash.py  monitor.py  ota_server.ps1  ota_server.py  partitions.csv  rebuild.bat  release.py  sdkconfig.defaults
zobo_esp32/main/: CMakeLists.txt  ble_service.c  ble_service.h  led.c  led.h  main.c  motor.c  motor.h  ota_manager.c  ota_manager.h  sleep_manager.c  sleep_manager.h  wifi_manager.c  wifi_manager.h
zobo_flutter/: .gitignore  README.md  build_install.py  pubspec.yaml
zobo_flutter/android/: gradle.properties
zobo_flutter/android/app/: build.gradle
zobo_flutter/android/app/src/main/: AndroidManifest.xml
zobo_flutter/android/app/src/main/kotlin/cz/davidpetrov/zobo_flutter/: MainActivity.kt
zobo_flutter/lib/: main.dart
zobo_flutter/lib/pages/: settings_page.dart
zobo_flutter/lib/services/: ble_service.dart
zobo_flutter/lib/widgets/: hold_repeat_button.dart
zobo_flutter/test/: widget_test.dart
zobo_platformio/: platformio.ini
zobo_platformio/src/: ZoboBle.ino
